@@ -979,6 +979,16 @@ class StripeTest < Test::Unit::TestCase
     @gateway.purchase(@amount, @credit_card, @options)
   end
 
+  def test_verify_good_credentials
+    @gateway.expects(:raw_ssl_request).returns(credentials_are_legit_response)
+    assert @gateway.verify_credentials
+  end
+
+  def test_verify_bad_credentials
+    @gateway.expects(:raw_ssl_request).returns(credentials_are_bogus_response)
+    assert !@gateway.verify_credentials
+  end
+
   private
 
   # this mock is only useful with unit tests, as cryptograms generated by an EMV terminal
@@ -1799,4 +1809,30 @@ class StripeTest < Test::Unit::TestCase
     }
     RESPONSE
   end
+
+  def credentials_are_legit_response
+    body = <<-JSON
+    {
+      "error": {
+        "type": "invalid_request_error",
+        "message": "No such charge: nonexistent",
+        "param": "id"
+        }
+    }
+    JSON
+    MockResponse.new(404, body)
+  end
+
+  def credentials_are_bogus_response
+    body = <<-JSON
+    {
+      "error": {
+        "type": "invalid_request_error",
+        "message": "Invalid API Key provided: an_unknown_***_key"
+      }
+    }
+    JSON
+    MockResponse.new(401, body)
+  end
+
 end
